--- a/app/views/layouts/navigation/_header.html.erb
+++ b/app/views/layouts/navigation/_header.html.erb
@@ -5,5 +5,5 @@
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
   </button>
-  <%= link_to 'New Project', root_path, class: 'navbar-brand' %>
+  <%= link_to 'MyAddvertisement Portal', root_path, class: 'navbar-brand' %>
 </div>
