slot creation part done

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,7 +35,7 @@
                 <h3><%= slot.title %></h3>
                 <p>start at:<%= slot.start_at %></p>
                 <p>end at:<%= slot.end_at %></p>
-                <%= link_to "I'm interested", slot_path(slot.id), class: 'interested' %>
+                <%#= link_to "I'm interested", slot_path(slot.id), class: 'interested' %>
               </div>
             </div>
           </div><!-- card -->
