--- a/app/views/slots/_form.html.erb
+++ b/app/views/slots/_form.html.erb
@@ -1,3 +1,4 @@
+
 <div class="container">
   <div class="form-row">
     <div class="col-sm-8 col-sm-offset-2">
@@ -8,19 +9,13 @@
               <%= f.label :title, class: "control-label" %>
               <%= f.text_field :title, class: "form-control" %>
             </div>
-            <div class="col-sm-10">
             <div class="form-group">
-              <div class='input-group date' id='datetimepicker8'>
-              <%= f.text_field :start_at, class: "form-control", as: :string %>
-              <span class="input-group-addon">
-                    <span class="fa fa-calendar">
-                    </span>
-                </span>
-              </div>
-            </div>
+              <%= f.label :start_at, class: "control-label" %>
+              <%= f.datetime_select :start_at, class: "form-control", as: :string %>
             </div>
             <div class="form-group">
-              <%= f.input :end_at, :order => [:month, :day, :year], class: "form-control" %>
+              <%= f.label :end_at, class: "control-label" %>
+              <%= f.datetime_select :end_at, class: "form-control" %>
             </div>
             <div class="form-group">
               <%= f.label :Status, class: "control-label" %>
@@ -42,10 +37,18 @@
   </div>
 </div>
 
-<!--<script type="text/javascript">-->
-<!--    $(document).on('turbolinks:load', function(){-->
-<!--        console.log("sakshi")-->
-<!--        console.log($('#datetimepicker8'))-->
-<!--        $('#datetimepicker8').datetimepicker();-->
+<!--<script>-->
+<!--    $(document).on('turbolinks:load', function() {-->
+<!--        $('#slot_start_at').daterangepicker({-->
+<!--            timePicker: true,-->
+<!--            locale: {-->
+<!--                format: 'MM/DD/YYYY h:mm A'-->
+<!--            },-->
+<!--            singleDatePicker: true,-->
+<!--            showDropdowns: true,-->
+<!--            drops: "down",-->
+<!--            minDate: '01/01/2012',-->
+<!--            maxDate: '12/31/2017'-->
+<!--        });-->
 <!--    });-->
 <!--</script>-->
