--- a/app/views/slots/show.html.erb
+++ b/app/views/slots/show.html.erb
@@ -1,9 +1,23 @@
 <div id="single-post-content" class="container">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">
-      <div class="posted-by">Posted by <%= @slot.user.name %></div>
-      <h3><%= @slot.title %></h3>
-      <p><%= @slot.start_at %></p>
+    <div class="col-sm-8 col-sm-offset-3">
+      <div class="posted-by"><strong>Booked by <%= @slot.user.name %></strong></div>
+      <div class="col-sm-2">
+        <strong>Name:</strong>
+        <p><%= @slot.title %></p>
+      </div>
+      <div class="col-sm-2">
+        <strong>Status:</strong>
+        <p><%=  @slot.status %></p>
+      </div>
+      <div class="col-sm-2">
+        <strong>Start At:</strong>
+        <p><%=format_date_with_time(@slot.start_at) %></p>
+      </div>
+      <div class="col-sm-2">
+        <strong>End At:</strong>
+        <p><%= format_date_with_time(@slot.end_at) %></p>
+      </div>
     </div>
   </div><!-- row -->
 </div>
