--- a/app/views/slots/_form.html.erb
+++ b/app/views/slots/_form.html.erb
@@ -3,8 +3,16 @@
   <div class="form-row">
     <div class="col-sm-8 col-sm-offset-2">
       <%= simple_form_for(@slot, local: true) do |f| %>
+        <% if f.object.errors.any? %>
+        <ul class="list-group text-danger mt-3">
+          <% f.object.errors.full_messages.each do |message| %>
+            <li class="list-group-item"><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
         <div class="card">
           <div class="card-body">
+            <div class="error list-group disabled align-center text-danger mb-0 px-1"></div>
             <div class="form-group">
               <%= f.label :title, class: "control-label" %>
               <%= f.text_field :title, class: "form-control" %>
@@ -24,7 +32,7 @@
           </div>
           <div class="card-footer">
             <div class="form-group text-center">
-              <%= f.hidden_field :user_id, value: @user.id %>
+              <%= f.hidden_field :user_id, value: @user.id if @user.id.present? %>
               <%= f.submit class: "btn btn-primary btn-block mb-2" %>
             </div>
             <div class="form-group text-center">
