--- a/app/views/slots/booked.html.erb
+++ b/app/views/slots/booked.html.erb
@@ -2,26 +2,26 @@
   <div class="row">
     <div id="side-menu" class="col-sm-2">
       <ul id="links-list">
-        <li id="occupied">
+        <li id="hobby">
           <%= link_to occupied_slots_path do %>
-            <i class="fa fa-user-circle-o" aria-hidden="true"></i> Booked Slot
+            <i class="fa fa-book" aria-hidden="true"></i> Booked Slot
           <% end %>
         </li>
 
-        <li id="free">
+        <li id="study">
           <%= link_to free_slots_path do %>
-            <i class="fa fa-graduation-cap" aria-hidden="true"></i> Free Slot
+            <i class="fa fa-binoculars" aria-hidden="true"></i> Free Slot
           <% end %>
         </li>
 
-        <li id="booked">
+        <li id="team">
           <%= link_to booked_slots_path do %>
             <i class="fa fa-users" aria-hidden="true"></i> Pre Book Slot
           <% end %>
         </li>
       </ul>
     </div><!-- side-menu -->
-    <h3 class="page-name">Free Slot</h3>
+    <h3 class="page-name">Pre Book Slot</h3>
     <div id="main-content" class="col-sm-10">
       <% @free_slot.each do |slot| %>
         <div class="col-sm-3 single-post-card" id=<%= slot_path(slot.id) %>>
@@ -33,10 +33,18 @@
               <div class="post-content">
                 <div class="posted-by">Posted by <%= slot.user.name %></div>
                 <h3><%= slot.title %></h3>
-                <h3><%= slot.status %></h3>
-                <p>start at:<%= slot.start_at %></p>
-                <p>end at:<%= slot.end_at %></p>
-                <%= link_to "I'm interested", slot_path(slot.id), class: 'interested' %>
+                <strong>Status:- </strong><span><em><%= slot.status %></em></span>
+                <p>start at:<%= format_date_with_time(slot.start_at) %></p>
+                <p>end at:<%= format_date_with_time(slot.end_at) %></p>
+                <div class="text-center" style="margin-top: 15px;">
+                  <% if current_user.role == "Organisation" && slot.status == "Pre Booked Slot" %>
+                    <%= link_to "Bid Slot", slot_path(slot.id), class: 'btn btn-primary' %>
+                  <% elsif (current_user.role == "Organisation" || current_user.role == "Space Agent") && slot.status == "Free Slot" %>
+                    <%= link_to "Book Slot", slot_path(slot.id), class: 'btn btn-primary' %>
+                  <% else %>
+
+                  <% end %>
+                </div>
               </div>
             </div>
           </div><!-- card -->
