form and bid functionality done

--- a/app/assets/stylesheets/base/default.scss
+++ b/app/assets/stylesheets/base/default.scss
@@ -76,8 +76,31 @@ a:hover, a:active, a:link, a:visited {
   display: -webkit-flex;
 }
 
+.form-group input.form-control{
+  line-height: 1.5!important;
+  color:#2C4159 !important;
+  padding: 9px 8px 6px 8px;
+  -webkit-font-smoothing: antialiased;
+  border-width: 2px!important;
+  border-style: solid;
+  border-color: rgb(236, 238, 242);
+  /* border-image: initial; */
+  border-radius: 2px!important;
+  outline: none!important;
+  height: auto;
+  box-shadow: unset!important;
+  -webkit-appearance:none!important;
+  font-weight: 500;
+  font-size: 13px;
+}
+.form-group input.form-control:focus{
+  border-color: #2C4159!important;
+}
+
 
 .bootstrap-datetimepicker-widget.dropdown {
   background: white !important;
 }
+
+
 
