--- a/app/views/slots/occupied.html.erb
+++ b/app/views/slots/occupied.html.erb
@@ -33,10 +33,11 @@
               <div class="post-content">
                 <div class="posted-by">Posted by <%= slot.user.name %></div>
                 <h3><%= slot.title %></h3>
-                <strong>Status:- </strong><span><em><%= slot.status %></em></span>
-                <p>start at:<%= format_date_with_time(slot.start_at) %></p>
-                <p>end at:<%= format_date_with_time(slot.end_at) %></p>
-                <div class="text-center" style="margin-top: 15px;">
+                <strong>Status:- </strong><span><em><%= slot.status %></em></span><br>
+                <strong>Amount:- </strong><span><em><%= slot.total_amount %></em></span><br>
+                <strong>start at:</strong><span><em><%= format_date_with_time(slot.start_at) %></em></span><br>
+                <strong>start at:</strong><span><em><%= format_date_with_time(slot.end_at) %></em></span><br>
+                <div class="text-center">
                   <% if current_user.role == "Organisation" && slot.status == "Pre Booked Slot" %>
                     <%= link_to "Bid Slot", slot_path(slot.id), class: 'btn btn-primary' %>
                   <% elsif (current_user.role == "Organisation" || current_user.role == "Space Agent") && slot.status == "Free Slot" %>
