--- a/app/views/slots/index.html.erb
+++ b/app/views/slots/index.html.erb
@@ -48,9 +48,14 @@
                   <% if current_user.role == "Organisation" && slot.status == "Pre Booked Slot" %>
                     <%= link_to "Bid Slot", new_bid_path(slot_id: slot.id), class: 'btn btn-primary' %>
                   <% elsif (current_user.role == "Organisation" || current_user.role == "Space Agent") && slot.status == "Free Slot" %>
-                    <%= link_to "Book Slot", edit_slot_path(slot.id), class: 'btn btn-primary' %>
+                    <%= link_to "Book Slot", confirm_booking_slot_path(slot.id), class: 'btn btn-primary' %>
                     <%elsif (current_user.role == "Space Agent" && slot.status == 'Bid Approval Pending') %>
-                    <%= link_to "Approve", slot_path(slot.id), class: 'btn btn-info' %>
+                    <span class="text-left">
+                    <%= link_to "Approve", approval_slot_path(slot.id), class: 'btn btn-info' %>
+                    </span>
+                    <span class="text-right">
+                      <%= link_to "Reject", rejection_slot_path(slot.id), class: 'btn btn-info' %>
+                    </span>
                   <% else %>
 
                   <% end %>
