--- a/app/views/user_mailer/notification_email.text.erb
+++ b/app/views/user_mailer/notification_email.text.erb
@@ -1,5 +1,9 @@
-Welcome to example.com, <%= @user.name %>
+Welcome to AddSpaceBooking Site, <%= @user.name %>
 ===============================================
-You have successfully signed up to example.com,
-your username is: <%= @user.name %>.
+
+  You have successfully Created Slot,
+  your Slot ID is: <%= @slot.id %>
+   Start Date is : <%= format_date_time_meridiem(@slot.start_at) %>
+   End Date is :<%= format_date_time_meridiem(@slot.end_at) %>
+
 Thanks for joining and have a great day!
