--- a/app/views/bids/_form.html.erb
+++ b/app/views/bids/_form.html.erb
@@ -35,7 +35,7 @@
             </div>
 
             <div class="form-group">
-              <%= f.select :status, Bid.statuses.except('Approved', 'Rejected'), {}, class: 'form-control' %>
+              <%= f.select :status, Bid.statuses.except('Approved', 'Rejected').keys, {}, class: 'form-control' %>
             </div>
             <%= f.submit class: "btn btn-primary btn-block mb-2" %>
       <% end %>
