--- a/app/views/user_mailer/sent_for_approval.html.erb
+++ b/app/views/user_mailer/sent_for_approval.html.erb
@@ -7,11 +7,11 @@
 <div class="font-family: Arial; color: #555; font-size: 14.5px">
   <h6> Hi <%= @user.name %></h6></br>
   <p>
-    You have successfully Created Slot. <br>
-    your Slot ID is: <%= @slot.id %>.<br>
-    Slot Status: <%= @slot.status %>
-    Start Date is : <%= format_date_time_meridiem(@slot.start_at) %><br>
-    End Date is<%= format_date_time_meridiem(@slot.end_at) %><br>
+    Your Bid  For Slot has been created. <br>
+    your Slot ID is: <%= @bid.slot.id %>.<br>
+    Bid Status : <%= @bid.status %><br>
+    Start Date is : <%= format_date_time_meridiem(@bid.slot.start_at) %><br>
+    End Date is : <%= format_date_time_meridiem(@bid.slot.end_at) %><br>
     Thanks for joining and have a great day!
   </p>
 </div>
