production smtp setting done

--- a/app/views/shared/snippets/_form_errors.html.erb
+++ b/app/views/shared/snippets/_form_errors.html.erb
@@ -1,6 +1,6 @@
 <% if f.object.errors.any? %>
   <ul class="list-group text-danger mb-3">
-    <% f.object.errors.full_messages.each do |message| %>
+    <% f.object.errors.full_messages.uniq.each do |message| %>
       <li class="list-group-item"><%= message %></li>
     <% end %>
   </ul>
