code modififaction for space agent and log out button added

--- a/app/views/slots/booked.html.erb
+++ b/app/views/slots/booked.html.erb
@@ -13,11 +13,20 @@
             <i class="fa fa-binoculars" aria-hidden="true"></i> Free Slot
           <% end %>
         </li>
-
         <li id="team">
           <%= link_to booked_slots_path do %>
             <i class="fa fa-users" aria-hidden="true"></i> Pre Book Slot
           <% end %>
+        </li>
+        <li>
+          <% if current_user.role == "Space Provider" %>
+            <%= link_to new_slot_path do %>
+              <i class="fa fa-cart-plus" aria-hidden="true"></i> Create Slot
+            <% end %>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'btn-btn-info'%>
         </li>
       </ul>
     </div><!-- side-menu -->
@@ -36,7 +45,7 @@
                 <strong>Status:- </strong><span><em><%= slot.status %></em></span><br>
                 <strong>Amount:- </strong><span><em><%= slot.total_amount %></em></span><br>
                 <strong>start at:</strong><span><em><%= format_date_time_meridiem(slot.start_at) %></em></span><br>
-                <strong>start at:</strong><span><em><%= format_date_time_meridiem(slot.end_at) %></em></span><br>
+                <strong>End at:</strong><span><em><%= format_date_time_meridiem(slot.end_at) %></em></span><br>
                 <div class="text-center" style="">
                   <% if current_user.role == "Organisation" && slot.status == "Pre Booked Slot" %>
                     <%= link_to "Bid Slot", new_bid_path(slot_id: slot.id), class: 'btn btn-primary' %>
