--- a/app/views/slots/free.html.erb
+++ b/app/views/slots/free.html.erb
@@ -19,6 +19,16 @@
             <i class="fa fa-users" aria-hidden="true"></i> Pre Book Slot
           <% end %>
         </li>
+        <li>
+          <% if current_user.role == "Space Provider" %>
+            <%= link_to new_slot_path do %>
+              <i class="fa fa-cart-plus" aria-hidden="true"></i> Create Slot
+            <% end %>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'btn-btn-info'%>
+        </li>
       </ul>
     </div><!-- side-menu -->
     <div id="main-content" class="col-sm-10">
@@ -36,7 +46,7 @@
                 <strong>Status:- </strong><span><em><%= slot.status %></em></span><br>
                 <strong>Amount:- </strong><span><em><%= slot.total_amount %></em></span><br>
                 <strong>start at:</strong><span><em><%= format_date_time_meridiem(slot.start_at) %></em></span><br>
-                <strong>start at:</strong><span><em><%= format_date_time_meridiem(slot.end_at) %></em></span><br>
+                <strong>End at:</strong><span><em><%= format_date_time_meridiem(slot.end_at) %></em></span><br>
                 <div class="text-center" style="margin-top: 15px">
                   <% if current_user.role == "Organisation" && slot.status == "Pre Booked Slot" %>
                     <%= link_to "Bid Slot", new_bid_path(slot_id: slot.id), class: 'btn btn-primary' %>
