--- a/app/views/slots/free.html.erb
+++ b/app/views/slots/free.html.erb
@@ -27,6 +27,7 @@
           <% end %>
         </li>
         <li>
+          <i class="fa fa-cart-plus"></i>
           <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'btn-btn-info'%>
         </li>
       </ul>
