--- a/app/views/layouts/navigation/_collapsible_elements.html.erb
+++ b/app/views/layouts/navigation/_collapsible_elements.html.erb
@@ -7,7 +7,7 @@
           <span class="caret"></span>
         </a>
 
-        <ul class="dropdown-menu" role="menu">
+        <ul class="dropdown-menu myprofile" role="menu">
           <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
           <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
         </ul>
