--- a/app/views/bids/_form.html.erb
+++ b/app/views/bids/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="form-row">
+  <div class="row">
     <div class="col-sm-8 col-sm-offset-2" style="margin-top: 10rem;">
       <%= simple_form_for(@bid, local: true) do |f| %>
         <div class="card">
@@ -8,6 +8,16 @@
             <%= f.hidden_field :slot_id %>
             <%= f.hidden_field :bid_by, value: current_user.id if current_user.present? %>
             <%= render 'shared/snippets/form_errors', f: f %>
+            <div class="form-row">
+              <div class="col-sm-6">
+                <strong>Slot Id:</strong>
+                <p><%= @bid.slot.id %></p>
+              </div>
+              <div class="col-sm-6">
+                <strong>Slot Pre Booked By:</strong>
+                <p><b><%= @bid.slot.user.name %></b></p>
+              </div>
+            </div>
             <div class="form-row">
               <div class="col-sm-6">
                 <strong>Slot Start Time:</strong>
@@ -21,17 +31,17 @@
           </br>
             <div class="form-row">
               <div class="col-sm-6">
-                <strong>Slot Pre Booked By:</strong>
-                <p><b><%= @bid.slot.user.name %></b></p>
-              </div>
-              <div class="col-sm-6">
                 <strong>Created At:</strong>
                 <p><%= @bid.slot.created_at.to_date.to_s %></p>
               </div>
+              <div class="col-sm-6">
+                <strong>Slot Amount:</strong>
+                <p><b><%= @bid.slot.total_amount %></b></p>
+              </div>
             </div>
             <div class="form-group">
-              <%= f.label 'Amount', class: "control-label" %>
-              <%= f.text_field :amount, value: @slot.total_amount, class: "form-control" %>
+              <%= f.label 'Bid Amount', class: "control-label" %>
+              <%= f.text_field :amount, required: true, class: "form-control" %>
             </div>
 
             <div class="form-group">
