--- a/app/views/bids/index.html.erb
+++ b/app/views/bids/index.html.erb
@@ -1,2 +1,43 @@
-<h1>Bids#index</h1>
-<p>Find me in app/views/bids/index.html.erb</p>
+
+<div class="container">
+  <div class="row">
+    <div class="card-body">
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+          <tr>
+            <th>Bid Id</th>
+            <th>Slot Id</th>
+            <th>Bid Status</th>
+            <th>Start date</th>
+            <th>End Date</th>
+            <th> Bid By</th>
+            <th>Bid Amount</th>
+            <th> Total Amount</th>
+            <th colspan="3"></th>
+          </tr>
+          </thead>
+
+          <tbody>
+          <% @bids.each do |bid| %>
+            <tr>
+              <td><%= bid.id %></td>
+              <td><%= bid.slot.id %></td>
+              <td><%= bid.status %></td>
+              <td><%= format_date_time_meridiem(bid.slot.start_at) %></td>
+              <td><%= format_date_time_meridiem(bid.slot.start_at) %></td>
+              <td><%= bid.user.name %></td>
+              <td><%= bid.amount %></td>
+              <td><%= bid.slot.bid_amount %></td>
+              <td><%= link_to 'Show', bid %></td>
+              <td><%= link_to 'Edit', edit_bid_path(bid) %></td>
+              <td><%= link_to 'Destroy', bid, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+            </tr>
+          <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+
