--- a/app/views/slots/index.html.erb
+++ b/app/views/slots/index.html.erb
@@ -1,38 +1,6 @@
 <div class="container">
   <div class="row">
-    <div id="side-menu" class="col-sm-2">
-      <ul id="links-list">
-        <li id="hobby">
-          <%= link_to occupied_slots_path do %>
-            <i class="fa fa-book" aria-hidden="true"></i> Booked Slot
-          <% end %>
-        </li>
-
-        <li id="study">
-          <%= link_to free_slots_path do %>
-            <i class="fa fa-binoculars" aria-hidden="true"></i> Free Slot
-          <% end %>
-        </li>
-
-        <li id="team">
-          <%= link_to booked_slots_path do %>
-            <i class="fa fa-users" aria-hidden="true"></i> Pre Book Slot
-          <% end %>
-        </li>
-        <li>
-          <% if current_user.role == "Space Provider" %>
-            <%= link_to new_slot_path do %>
-              <i class="fa fa-cart-plus" aria-hidden="true"></i> Create Slot
-            <% end %>
-          <% end %>
-        </li>
-        <div id="logout">
-          <i class="fa fa-cart-plus"></i>
-          <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'btn-btn-info'%>
-        </div>
-      </ul>
-    </div><!-- side-menu -->
-
+    <%= render 'shared/snippets/side_menu' %>
     <div id="main-content" class="col-sm-10">
       <% @slots.each do |slot| %>
         <div class="col-sm-3 single-post-card" id=<%= slot_path(slot.id) %>>
@@ -42,28 +10,16 @@
                 <%= truncate(slot.title, :length => 60) %>
               </h4>
               <div class="post-content">
-                <div class="posted-by">Posted by <%= slot.user.name %></div>
+                <div class="posted-by">User <%= slot.user.name %></div>
                 <h4>Slot Id: <%= slot.id %></h4>
                 <strong>Status:- </strong><span><em><%= slot.status %></em></span><br>
                 <strong>Amount:- </strong><span><em><%= slot.total_amount %></em></span><br>
+                <% if slot.bids.present? && slot.bid_amount.present? %>
+                  <strong>Bid Amt:- </strong><span><em><%= slot.bid_amount %></em></span><br>
+                <% end %>
                 <strong>start at:</strong><span><em><%= format_date_time_meridiem(slot.start_at) %></em></span><br>
                 <strong>End at:</strong><span><em><%= format_date_time_meridiem(slot.end_at) %></em></span><br>
-                <div class="text-center" style="margin-top: 35px;">
-                  <% if current_user.role == "Organisation" && slot.status == "Pre Booked Slot" %>
-                    <%= link_to "Bid Slot", new_bid_path(slot_id: slot.id), class: 'btn btn-primary' %>
-                  <% elsif (current_user.role == "Organisation" || current_user.role == "Space Agent") && slot.status == "Free Slot" %>
-                    <%= link_to "Book Slot", confirm_booking_slot_path(slot.id), class: 'btn btn-primary' %>
-                    <%elsif (current_user.role == "Space Agent" && slot.status == 'Bid Approval Pending') %>
-                    <span class="text-left">
-                    <%= link_to "Approve", approval_slot_path(slot.id), class: 'btn btn-info' %>
-                    </span>
-                    <span class="text-right">
-                      <%= link_to "Reject", rejection_slot_path(slot.id), class: 'btn btn-info' %>
-                    </span>
-                  <% else %>
-
-                  <% end %>
-                </div>
+                <%= render 'shared/snippets/card_link_button', slot:slot%>
               </div>
             </div>
           </div><!-- card -->
