--- a/app/views/user_mailer/notification_email.html.erb
+++ b/app/views/user_mailer/notification_email.html.erb
@@ -9,7 +9,7 @@
   <p>
     You have successfully Created Slot. <br>
     your Slot ID is: <%= @slot.id %>.<br>
-    Slot Status: <%= @slot.status %>
+    Slot Status: <%= @slot.status %><br>
     Start Date is : <%= format_date_time_meridiem(@slot.start_at) %><br>
     End Date is<%= format_date_time_meridiem(@slot.end_at) %><br>
     Thanks for joining and have a great day!
