--- a/app/views/bids/index.html.erb
+++ b/app/views/bids/index.html.erb
@@ -30,7 +30,7 @@
               <td><%= bid.amount %></td>
               <td><%= bid.slot.bid_amount %></td>
               <td><%= link_to 'Show', bid %></td>
-              <td><%= link_to 'Edit', edit_bid_path(bid) %></td>
+<!--              <td><%#= link_to 'Edit', edit_bid_path(bid) %></td>-->
               <td><%= link_to 'Destroy', bid, method: :delete, data: {confirm: 'Are you sure?'} %></td>
             </tr>
           <% end %>
