--- a/app/views/bids/index.html.erb
+++ b/app/views/bids/index.html.erb
@@ -1,8 +1,10 @@
-
 <div class="container">
   <div class="row">
     <div class="card-body">
       <div class="table-responsive">
+        <span class="pull-left" style="margin-bottom: 10px; font-size: 3rem">
+        <%= link_to "Back", :back %>
+      </span>
         <table class="table">
           <thead>
           <tr>
@@ -20,6 +22,7 @@
 
           <tbody>
           <% @bids.each do |bid| %>
+          <% bid_data = (bid.slot.status == 'Bid Approval Pending' && bid.status != "Rejected" && current_user.role == "Space Agent") %>
             <tr>
               <td><%= bid.id %></td>
               <td><%= bid.slot.id %></td>
@@ -29,10 +32,14 @@
               <td><%= bid.user.name %></td>
               <td><%= bid.amount %></td>
               <td><%= bid.slot.bid_amount %></td>
-              <td><%= link_to 'Show', bid %></td>
-<!--              <td><%#= link_to 'Edit', edit_bid_path(bid) %></td>-->
-              <td><%= link_to 'Destroy', bid, method: :delete, data: {confirm: 'Are you sure?'} %></td>
-            </tr>
+<!--              <td><%#= link_to 'Show', bid, class: 'btn btn-info' %></td>-->
+              <% if bid_data.present? %>
+                    <td><%= link_to "Approve", approval_bid_path(bid.id), class: 'btn btn-info' %></td>
+                    <td><%= link_to "Reject", rejection_bid_path(bid.id), class: 'btn btn-info' %></td>
+          <% end %>
+          <!--              <td><%#= link_to 'Edit', edit_bid_path(bid) %></td>-->
+<!--          <td><%#= link_to 'Destroy', bid, method: :delete, data: {confirm: 'Are you sure?'} %></td>-->
+          </tr>
           <% end %>
           </tbody>
         </table>
